styles/2_style.css
* {
  box-sizing: border-box;
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
}
html, body {
  width: 100%;
  font: 16px "PT Serif", Georgia, Times, serif;
  -webkit-transition: ease-in-out background-color .3s;
  -moz-transition: ease-in-out background-color .3s;
}
body {
  margin: 0;
  padding: 0;
  background: #eee -webkit-linear-gradient(top, #ccc, #fff);
  box-shadow: inset 0 0 20px #ccc;
}

p, ol, ul {
  line-height: 1.5em;
  margin: 1.5em 0;
}

iframe {
  border: none;
}

address {font-style: normal;}

button {
  color: #000;
  text-shadow: 0 1px 1px rgba(255, 255, 255, 0.75);
  margin: 2px 0px;
  padding: 4px 1em;
  border-radius: 4px;
  border: 1px solid #ccc;
  background-image: linear-gradient(to bottom, #ffffff, #e6e6e6);
}
button:hover, button[disabled] {
  background-image: linear-gradient(to bottom, #f0f0f0, #e6e6e6);
}
button:active, button:focus {
  background-image: linear-gradient(to bottom, #e0e0e0, #d6d6d6);
}
button[disabled] {
  cursor: default;
  color: #999;
}

textarea {
  margin: 2px 0px;
  padding: 0.5em;
  border-radius: 4px;
  border: 1px solid #ccc;
  box-shadow: inset 0 1px 2px rgba(0,0,0,.1)
}

a, a:visited { color: #1D78B4; text-decoration: none; }
a:hover { color: #1D78B4; text-decoration: underline; }
.external {
  background: url(http://static.q42.nl/images/external_link_icon.png) no-repeat center right;
  padding-right: 18px;
}
.readmore {
  padding: 0px 0px 2px 5px;
  transition: all .2s ease-out;
  display: inline-block;
  height: 21px;
  -webkit-transition: all .2s ease-out;
  -moz-transition: all .2s ease-out;
}
.readmore:hover {
  background-color: #1D78B4;
  color: white;
  text-decoration: none;
  transition: all .2s ease-out;
  -webkit-transition: all .2s ease-out;
  -moz-transition: all .2s ease-out;
}

.readmore:before{ content: "";}

.readmore:after {
  content: " »";
  background-color: #1D78B4;
  color: white;
  margin-left: 6px;
  padding: 0px 4px 0px 5px;
  font-size: 23px;
  height: 21px;
  display: inline-block;
  line-height: 17px;
}

a.button {
  font-family: Lato, "Helvetica Neue", Helvetica, Arial, sans-serif;
  padding: .3em .8em .4em .8em;
  border-radius: 20px;
  line-height: 5em;
  text-decoration: none;
  border: solid 1px #ccc;
}
a.button:hover {
  color: white;
  border-color: #8cd600;
  background-color: #8cd600;
}

.gfyitem {
  height: 160px;
}

/* default screen size: 320 + 320 + 300 = 3 columns*/
body {
  -webkit-perspective: 2000px;
  -moz-perspective: 2000px;
  perspective: 2000px;
}
#page {
  opacity: 0;
  background: white;
  box-shadow: 0 0 20px rgba(0,0,0,.4);
  padding-bottom: 80px;
  -webkit-transform-origin: center top;
  -moz-transform-origin: center top;
  -ms-transform-origin: center top;
  -o-transform-origin: center top;
  transform-origin: center top;
}
.container {
  width: 940px;
  min-height: 300px;
  margin: 0 auto;
}
#page.show {
  opacity: 1;
  -webkit-animation: bounceIn .4s ease-in;
  -moz-animation: bounceIn .4s ease-in;
  -ms-animation: bounceIn .4s ease-in;
  -o-animation: bounceIn .4s ease-in;
  animation: bounceIn .4s ease-in;
}
@-webkit-keyframes bounceIn {
  0% {
    opacity: 0;
    -webkit-transform: scale(.9) rotateX(3deg);
  } 50% {
    opacity: 1;
    -webkit-transform: scale(1.01) rotateX(2deg);
  }

  70% {
    opacity: 1;
    -webkit-transform: scale(.98) rotateX(1deg);
  }

  100% {
    opacity: 1;
    -webkit-transform: scale(1) rotateX(0);
  }
}
@-moz-keyframes bounceIn {
  0% {
    opacity: 0;
    -moz-transform: scale(.9) rotateX(3deg);
  } 50% {
    opacity: 1;
    -moz-transform: scale(1.01) rotateX(2deg);
  }

  70% {
    opacity: 1;
    -moz-transform: scale(.98) rotateX(1deg);
  }

  100% {
    opacity: 1;
    -moz-transform: scale(1) rotateX(0);
  }
}
@-ms-keyframes bounceIn {
  0% {
    opacity: 0;
    -ms-transform: scale(.9) rotateX(3deg);
  } 50% {
    opacity: 1;
    -ms-transform: scale(1.01) rotateX(2deg);
  }

  70% {
    opacity: 1;
    -ms-transform: scale(.98) rotateX(1deg);
  }

  100% {
    opacity: 1;
    -ms-transform: scale(1) rotateX(0);
  }
}
@-o-keyframes bounceIn {
  0% {
    opacity: 0;
    -o-transform: scale(.9) rotateX(3deg);
  } 50% {
    opacity: 1;
    -o-transform: scale(1.01) rotateX(2deg);
  }

  70% {
    opacity: 1;
    -o-transform: scale(.98) rotateX(1deg);
  }

  100% {
    opacity: 1;
    -o-transform: scale(1) rotateX(0);
  }
}
@keyframes bounceIn {
  0% {
    opacity: 0;
    transform: scale(.9) rotateX(3deg);
  } 50% {
    opacity: 1;
    transform: scale(1.01) rotateX(2deg);
  }

  70% {
    opacity: 1;
    transform: scale(.98) rotateX(1deg);
  }

  100% {
    opacity: 1;
    transform: scale(1) rotateX(0);
  }
}

.visual img {
  width: 100%;
}

/* footer */
footer {
  clear: both;
}

/* end footer */

/* block-text */
.block-text {
  border-top: solid transparent 20px;
  padding-bottom: 20px;
  border-bottom: solid #ccc 1px;
}

.block-text h1,
.blog h1 {
  font: normal 2.84em Lato, Georgia, Times, serif;
  letter-spacing: -1px;
  margin: 20px 0;
  color: #888;
  text-align: left;
}
#blog-posts h1 {
  margin: 0;
}

.block-text h1 b,
.blog h1 b {
  color: #232323;
  font-weight: normal;
}

.block-full {
  position: relative;
  border-bottom: solid #ccc 1px;
  padding: 40px 0;
  clear: both;
  /*overflow: hidden;*/
}

.block-large {
  border-bottom: solid #ccc 1px;
  padding: 40px 0;
  clear: both;
  /*overflow: hidden;*/
}
.blog .block-large {
  clear: none;
}

section h1,
.block-large h1 {
  text-align: left;
}
section h2,
.block-large > .body h2
{
  font: normal 40px Lato, Georgia, Times, serif;
  margin: 0 0 20px 0;
  letter-spacing: -1px;
  color: #232323;
}
.blog aside h2,
.comments h2,
.blog .block-large > .body h2 {
  font: normal 1.4em Lato, Georgia, Times, serif;
  letter-spacing: -1px;
}
.block-large > .body h3 {
  font: 14px/1.5 Lato, Georgia, Times, serif;
  padding: 0px;
  margin-top: -18px;
  color: #888;
}

.block-small h3 {
  font: 14px/1.5 Lato, Georgia, Times, serif;
  padding: 0px;
  margin-top: 3px;
  color: #888;
}

.block-large .visual {
  position: relative;
  width: 620px;
  margin: 0 20px 0 0;
  float: left;
}

.block-large.right .visual {
  margin: 0 0 0 20px;
  float: right;
}


.block-large .body {
  width: 300px;
  float: right;
}
.block-large.right .body {
  float: left;
}

.block-readmore {
  clear: both;
  text-align: right;
}

/* block-small */
.block-small {
  width: 300px;
  float: left;
  white-space: normal;
  overflow: hidden;
}
.block-small .body {
  float: none;
  overflow: hidden;
}
.block-small h2 {
  font: normal 25px Lato, Georgia, Times, serif;
  margin: 20px 0 0 0;
  letter-spacing: -1px;
}
.block-small .visual {
  float: none;
  position: relative;
  width: 300px;
  overflow: hidden;
}
.block-small .visual img {
  width: 300px; height: 160px;
}

.block-small:nth-of-type(1),
.block-small:nth-of-type(2) {
  margin-right: 20px;
}

.subcontent {
  padding: 15px;
  color: #888;
  line-height: 24px;
}

.subcontent h2:first-child {
  margin: 0px;
}

ul {
  padding: 0px 0px 0px 20px;
  list-style-type: square;
  line-height: 24px;
}
span {
  -webkit-transition: all .3s ease-out;
  -moz-transition: all .3s ease-out;
}

.block-large:after {
  content: ".";
  display: block;
  clear: both;
  visibility: hidden;
  line-height: 0;
  height: 0;
}

.clear {
  clear: both;
}

.reblog .intro {
  padding: 0 0 0 4em;
  background: url(http://static.q42.nl/images/icon_reblog.jpeg) 1em no-repeat;
}
.reblog h1 {
  font-size: 32px;
}

.blog .index-page .block-small img {
  width: 300px;
  height: auto;
}

.blog .intro img {
  max-width: 100%;
  border: solid 5px white;
  box-shadow: 0 0 4px rgba(0,0,0,.4);
  margin-left: 2px; /* force the box shadow to be shown since the parent has overflow: hidden */
}
.blog .intro h1 p {
  margin: 0 0 5px 0;
  line-height: 1;
}
.blog .intro .figure {
  margin-top: 20px;
}

.blog .block-readmore {
  margin-top: 20px;
  margin-bottom: 0;
  padding: 0;
}

.loading {
  margin: 3em auto;
  padding: 30em;
  text-align: center;
}

.comments {
  clear: both;
  padding: 0 0 0 50px;
}
.comments h2:first-child {
  margin-left: -50px;
}
.comments .commentbox {
  position: relative;
}
.comments textarea {
  width: 100%;
}
.comments > ul {
  margin: 0;
  padding: 0;
  list-style: none;
}
.comments > ul > li {
  margin: 0.5em 0 0 0;
  padding: 0.5em 0 0 0;
  list-style: none;
  border-top: 1px solid #eee;
}
.comments .user {
  position: relative;
}
.comments .user img, .comments .commentbox img {
  width: 40px;
  position: absolute;
  left: -50px;
  top: 2px;
  border-radius: 4px;
}
.comments .user .login-image {
  display: inline-block;
  width: 16px;
  height: 16px;
  vertical-align: -2px;
}
.comments .meta {
  color: #999;
  font-size: smaller;
}
.comments .edit-area,
.comments .save-link {
  display: none;
}
.comments li.edit-mode .edit-area {
  display: block;
}
.comments li.edit-mode .save-link {
  display: inline;
}
.comments li.edit-mode .text,
.comments li.edit-mode .edit-link {
  display: none;
}

#latestComments ul {
  overflow: hidden;
}
#latestComments li div {
  white-space: nowrap;
}

/* Sharing */

.socialShare {
  float: left;
  width: 50%;
  margin: 10px 0 40px;
  height: 50px;
}

.socialShare .twitterShare,
.socialShare .facebookShare {
  float: left;
}

.nowrap {
  white-space: nowrap;
}

.post-date {
  color: #888;
  margin-top: 0;
  font-size: 14px;
}

.block-tags {
  float: right;
  width: 45%;
  font-size: smaller;
}

#blog-posts {
  min-height: 300px;
  float: left;
}
#blog-posts h1 {
  font-size: 2em;
}

#blog-sidebar {
  margin: 0;
  padding-right: 0;
}

#loading {
  text-align: center;
  padding: 100px 0;
}

#home-employees {
  width: 80%;
  margin: 3em auto;
  height: 208px; /* 4 rows of 48 pixel high images + 8*2px margin */
}

#home-employees img {
  border-radius: 50%;
  width: 48px; height: 48px;
  margin: 2px;
}

